--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Josué Santana já transou hoje?</h1>
-        <p id = "sexo">Não!</p>
+        <div class = "container5">
+            <p id = "sexo">Não!</p>
+        </div>
         <script>
             if(new Date().getHours() > 19) {
                 document.getElementById("sexo").innerHTML = "Sim!";
