--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>O Josué Santana já transou hoje?</title>
+        <link rel="stylesheet" href="./styles.css"/> 
     </head>
     <body>
-        <h1>Josué Santana já transou hoje?</h1>
+        <h1>Josué Santana já transou hoje? ?</h1>
         <div class = "container5">
             <p id = "sexo">Não!</p>
         </div>
