--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 var diff = (now - start) + ((start.getTimezoneOffset() - now.getTimezoneOffset()) * 60 * 1000);
                 var oneDay = 1000 * 60 * 60 * 24;
                 var day = Math.floor(diff / oneDay);
-                document.getElementById("sexo").innerHTML = "Sim!<br>" + day + "/366";
+                document.getElementById("sexo").innerHTML = "Sim!<br>" + day + "/365";
             }
 
             var i = 0;
@@ -86,7 +86,7 @@
             <a> @ </a>
             <a href="https://www.twitch.tv/cdilol">Twitch</a>
             <a> | </a>
-            <a href="https://www.youtube.com/channel/UCFG6J55F__uzmaeBOh3kgoA?sub_confirmation=1">Inscreva-se 😡</a>
+            <a href="https://www.youtube.com/channel/UCFG6J55F__uzmaeBOh3kgoA?sub_confirmation=1">Inscreva-se 👊😡</a>
         </footer>
     </body>
 </html>
