--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <script>
-            if(new Date().getHours() > 19) {
+            if(new Date().getHours() > 18) {
                 var now = new Date();
                 var start = new Date(now.getFullYear(), 0, 0);
                 var diff = (now - start) + ((start.getTimezoneOffset() - now.getTimezoneOffset()) * 60 * 1000);
@@ -82,11 +82,11 @@
         </script>
         
         <footer id="rodape">
-            <span><a href="https://pt-br.facebook.com/crocodilodointerior/?ref=page_internal">Crocodilo do Interior</a></span>
+            <span><a href="https://pt-br.facebook.com/crocodilodointerior/?ref=page_internal" target="_blank">Crocodilo do Interior</a></span>
             <a> @ </a>
-            <a href="https://www.twitch.tv/cdilol">Twitch</a>
+            <a href="https://www.twitch.tv/cdilol" target="_blank">Twitch</a>
             <a> | </a>
-            <a href="https://www.youtube.com/channel/UCFG6J55F__uzmaeBOh3kgoA?sub_confirmation=1">Inscreva-se 👊😡</a>
+            <a href="https://www.youtube.com/channel/UCFG6J55F__uzmaeBOh3kgoA?sub_confirmation=1" target="_blank">Inscreva-se 👊😡</a>
         </footer>
     </body>
 </html>
