--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     console.log(jQuery.browser.mobile);
 
                         var k = 0;
-                        var preload = ['banjo.png', 'drip.png', 'fundo.png', 'light.png', 'snk.png', 'tokyo.png', 'crash.png', 'udyr.png']
+                        var preload = ['banjo.png', 'drip.png', 'fundo.png', 'light.png', 'snk.png', 'tokyo.png', 'crash.png', 'udyr.png', 'levi.png', 'ciro.png', 'sextou.png', 'troll.png']
                         var images = [];
                         for (n = 0; n < preload.length; n++) {
                             images[n] = new Image();
@@ -103,32 +103,106 @@
             
                         function changebackground() {
                             document.getElementById("botao").onclick = null;
-                            switch(k) {
-                                case 0:
-                                    document.body.style.background = "url('./fundo.png') no-repeat right top";
-                                    break;
-                                case 1:
-                                    document.body.style.background = "url('./drip.png') no-repeat right top";
-                                    break;
-                                case 2:
-                                    document.body.style.background = "url('./banjo.png') no-repeat right top";
-                                    break;
-                                case 3:
-                                    document.body.style.background = "url('./light.png') no-repeat right top";
-                                    break;
-                                case 4:
-                                    document.body.style.background = "url('./snk.png') no-repeat right top";
-                                    break;
-                                case 5:
-                                    document.body.style.background = "url('./tokyo.png') no-repeat right top";
-                                    break;
-                                case 6:
-                                    document.body.style.background = "url('./udyr.png') no-repeat right top";
-                                    break;
-                                case 7:
-                                    document.body.style.background = "url('./crash.png') no-repeat right top";
-                                    k = -1;
-                                    break;
+                            if(jQuery.browser.mobile === true) {
+                                switch(k) {
+                                    case 0:
+                                        document.body.style.background = "url('./fundo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 1:
+                                        document.body.style.background = "url('./drip.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 2:
+                                        document.body.style.background = "url('./banjo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 3:
+                                        document.body.style.background = "url('./light.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 4:
+                                        document.body.style.background = "url('./snk.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 5:
+                                        document.body.style.background = "url('./tokyo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 6:
+                                        document.body.style.background = "url('./udyr.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 7:
+                                        document.body.style.background = "url('./crash.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 8:
+                                        document.body.style.background = "url('./levi.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 9:
+                                        document.body.style.background = "url('./sextou.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        break;
+                                    case 10:
+                                        document.body.style.background = "url('./ciro.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "300% 100%";
+                                        k = -1;
+                                        break;
+                                }
+                            } else {
+                                switch(k) {
+                                    case 0:
+                                        document.body.style.background = "url('./fundo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 1:
+                                        document.body.style.background = "url('./drip.png') no-repeat left top";
+                                        document.body.style.backgroundSize = "105% 130%";
+                                        break;
+                                    case 2:
+                                        document.body.style.background = "url('./banjo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 3:
+                                        document.body.style.background = "url('./light.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 4:
+                                        document.body.style.background = "url('./snk.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 5:
+                                        document.body.style.background = "url('./tokyo.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 6:
+                                        document.body.style.background = "url('./udyr.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 7:
+                                        document.body.style.background = "url('./crash.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 8:
+                                        document.body.style.background = "url('./levi.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 9:
+                                        document.body.style.background = "url('./sextou.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 10:
+                                        document.body.style.background = "url('./ciro.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        break;
+                                    case 11: 
+                                        document.body.style.background = "url('./troll.png') no-repeat right top";
+                                        document.body.style.backgroundSize = "100% 100%";
+                                        k = -1;
+                                        break;
+                                }
                             }
                             k++;
                             setTimeout(changebackground, 1800);
