Switched image format from png to jpg

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Josué Santana já transou hoje?</title>
-        <link rel="shortcut icon" href="./favicon.png">              
+        <link rel="shortcut icon" href="./favicon.jpg">              
         <link rel="stylesheet" href="./styles.css"/> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -55,7 +55,7 @@
                     console.log(jQuery.browser.mobile);
 
                         var k = 0;
-                        var preload = ['banjo.png', 'drip.png', 'fundo.png', 'light.png', 'snk.png', 'tokyo.png', 'crash.png', 'udyr.png', 'levi.png', 'ciro.png', 'sextou.png', 'troll.png']
+                        var preload = ['banjo.jpg', 'drip.jpg', 'fundo.jpg', 'light.jpg', 'snk.jpg', 'tokyo.jpg', 'crash.jpg', 'udyr.jpg', 'levi.jpg', 'ciro.jpg', 'sextou.jpg', 'troll.jpg']
                         var images = [];
                         for (n = 0; n < preload.length; n++) {
                             images[n] = new Image();
@@ -106,47 +106,43 @@
                             if(jQuery.browser.mobile === true) {
                                 switch(k) {
                                     case 0:
-                                        document.body.style.background = "url('./fundo.png') no-repeat right top";
+                                        document.body.style.background = "url('./fundo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 1:
-                                        document.body.style.background = "url('./drip.png') no-repeat right top";
+                                        document.body.style.background = "url('./drip.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 2:
-                                        document.body.style.background = "url('./banjo.png') no-repeat right top";
+                                        document.body.style.background = "url('./banjo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 3:
-                                        document.body.style.background = "url('./light.png') no-repeat right top";
+                                        document.body.style.background = "url('./light.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 4:
-                                        document.body.style.background = "url('./snk.png') no-repeat right top";
+                                        document.body.style.background = "url('./snk.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 5:
-                                        document.body.style.background = "url('./tokyo.png') no-repeat right top";
+                                        document.body.style.background = "url('./tokyo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 6:
-                                        document.body.style.background = "url('./udyr.png') no-repeat right top";
+                                        document.body.style.background = "url('./udyr.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 7:
-                                        document.body.style.background = "url('./crash.png') no-repeat right top";
+                                        document.body.style.background = "url('./crash.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 8:
-                                        document.body.style.background = "url('./levi.png') no-repeat right top";
+                                        document.body.style.background = "url('./levi.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         break;
                                     case 9:
-                                        document.body.style.background = "url('./sextou.png') no-repeat right top";
-                                        document.body.style.backgroundSize = "300% 100%";
-                                        break;
-                                    case 10:
-                                        document.body.style.background = "url('./ciro.png') no-repeat right top";
+                                        document.body.style.background = "url('./sextou.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "300% 100%";
                                         k = -1;
                                         break;
@@ -154,47 +150,43 @@
                             } else {
                                 switch(k) {
                                     case 0:
-                                        document.body.style.background = "url('./fundo.png') no-repeat right top";
+                                        document.body.style.background = "url('./fundo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 1:
-                                        document.body.style.background = "url('./drip.png') no-repeat left top";
+                                        document.body.style.background = "url('./drip.jpg') no-repeat left top";
                                         document.body.style.backgroundSize = "105% 130%";
                                         break;
                                     case 2:
-                                        document.body.style.background = "url('./banjo.png') no-repeat right top";
+                                        document.body.style.background = "url('./banjo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 3:
-                                        document.body.style.background = "url('./light.png') no-repeat right top";
+                                        document.body.style.background = "url('./light.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 4:
-                                        document.body.style.background = "url('./snk.png') no-repeat right top";
+                                        document.body.style.background = "url('./snk.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 5:
-                                        document.body.style.background = "url('./tokyo.png') no-repeat right top";
+                                        document.body.style.background = "url('./tokyo.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 6:
-                                        document.body.style.background = "url('./udyr.png') no-repeat right top";
+                                        document.body.style.background = "url('./udyr.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 7:
-                                        document.body.style.background = "url('./crash.png') no-repeat right top";
+                                        document.body.style.background = "url('./crash.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 8:
-                                        document.body.style.background = "url('./levi.png') no-repeat right top";
+                                        document.body.style.background = "url('./levi.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         break;
                                     case 9:
-                                        document.body.style.background = "url('./sextou.png') no-repeat right top";
-                                        document.body.style.backgroundSize = "100% 100%";
-                                        break;
-                                    case 10:
-                                        document.body.style.background = "url('./ciro.png') no-repeat right top";
+                                        document.body.style.background = "url('./sextou.jpg') no-repeat right top";
                                         document.body.style.backgroundSize = "100% 100%";
                                         k = -1;
                                         break;
