--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Josué Santana já transou hoje?</title>
-        <link rel="shortcut icon" href="./favicon.jpg">              
+        <link rel="shortcut icon" href="./favicon.png">              
         <link rel="stylesheet" href="./styles.css"/> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
