--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="content-wrap">
                 <div id="vertical-center">
                     <div class="parent">
-                        <div class = "child" type = "button" id = "botao" onclick = "changebackground(); playDrip()">
+                        <div class = "child" type = "button" id = "botao" onclick = "changebackground(); playBirthday Sex()">
                             <p id="headidentation">
                                 <span id="josue" class="ponteiro">
                                     <!--Nome do Josué-->
@@ -93,10 +93,10 @@
             
                         typeWriter();
              
-                        function playDrip() {
+                        function playBirthday Sex() {
                             if(new Date().getHours() > 20) {
                                 document.getElementById("sexo").style.animation = "color-change 0.2s infinite";
-                                var audio = new Audio('drip.mp3');
+                                var audio = new Audio('Birthday Sex.mp3');
                                 audio.play();
                             }
                         }
