--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="content-wrap">
                 <div id="vertical-center">
                     <div class="parent">
-                        <div class = "child" type = "button" id = "botao" onclick = "changebackground(); playBirthday_Sex()">
+                        <div class = "child" type = "button" id = "botao" onclick = "changebackground(); playBirthday_Sex.mp3()">
                             <p id="headidentation">
                                 <span id="josue" class="ponteiro">
                                     <!--Nome do Josué-->
